Downgrade to Java 8 (#319)